5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_1805.log
== TEST (2019-04-10 11:52:08) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,yA)

-- OUTPUT:
10
10
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:52:14) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,yA)
print(A)
-- OUTPUT:
(50, 25)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:52:25) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,yA)
print(A)
-- OUTPUT:
(50, 25)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:53:06) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA," ",yA)
B = (xB," ",yB)

print(A," ",B)

-- OUTPUT:
(50, ' ', 25)   (30, ' ', 48)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:53:14) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA," ",yA)
B = (xB," ",yB)

print(A," ",B)

-- OUTPUT:
(50, ' ', 25)   (30, ' ', 48)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:53:29) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,,yA)
B = (xB,yB)

print(A," ",B)

-- ERROR:
File "XXXX", line 6
    A = (xA,,yA)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:53:34) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,yA)
B = (xB,yB)

print(A," ",B)

-- OUTPUT:
(50, 25)   (30, 48)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:54:01) 
-- CODE:
xA = int(input())
yA = int(input())
xB = int(input())
yB = int(input())

A = (xA,yA)
B = (xB,yB)

print("a: ",A," ","b: ",B)

-- OUTPUT:
a:  (50, 25)   b:  (30, 48)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:56:15) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

A = (xA,yA)
B = (xB,yB)

xM = ((xB + xA)/2)

yM = ((yB + yA)/2)

print(round(xM,1))
print(round(yM,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:56:22) 
-- CODE:
xA = float(input())
yA = float(input())
xB = float(input())
yB = float(input())

A = (xA,yA)
B = (xB,yB)

xM = ((xB + xA)/2)

yM = ((yB + yA)/2)

print(round(xM,1))
print(round(yM,1))
-- EXECUTION TIME:
0.153151
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
